--- a/classes/production/Kotlin-API/templates/back/urlrecord/index.html
+++ b/classes/production/Kotlin-API/templates/back/urlrecord/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="zh" xmlns:th="http://www.springframework.org/schema/data/jaxb">
+<html lang="zh">
 <head>
 
-    <title>网址收藏夹 | iolll.com</title>
+    <title>简单生活 | iolll.com</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
 
@@ -18,8 +18,9 @@
     <meta name="description" content="">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <!-- <link rel="stylesheet" href="css/lib/swiper-3.3.1.min.css"> -->
+    <link rel="stylesheet" href="css/menu.css">
     <link rel="stylesheet" href="css/phone.css">
-    <link rel="stylesheet" th:href="@{/css/commodity.css}">
+    <link rel="stylesheet" href="css/commodity.css">
     <link rel="stylesheet" href="css/backcolor.css">
     <link href="https://cdn.bootcss.com/photoswipe/4.1.2/photoswipe.css" rel="stylesheet">
     <link href="https://cdn.bootcss.com/photoswipe/4.1.2/default-skin/default-skin.css" rel="stylesheet">
@@ -111,16 +112,6 @@
 </div>
 <div style="text-align:center;clear:both">
 </div>
-<div>
-    网址收藏夹
-</div>
-<div>
-    <div><input id="searchInput" placeholder="搜索已添加网址"></div>
-    <div>搜索结果区域</div>
-    <div>空区域（添加数据）</div>
-</div>
-<div>未读网址</div>
-<div>自定义分类</div>
 
 <div id="list" class="banner">
     <div class="bannerItem ">
