--- a/classes/production/Kotlin-API/templates/reception/index.html
+++ b/classes/production/Kotlin-API/templates/reception/index.html
@@ -18,6 +18,7 @@
     <meta name="description" content="">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <!-- <link rel="stylesheet" href="css/lib/swiper-3.3.1.min.css"> -->
+    <link rel="stylesheet" href="css/menu.css">
     <link rel="stylesheet" href="css/phone.css">
     <link rel="stylesheet" th:href="@{/css/commodity.css}">
     <link rel="stylesheet" href="css/backcolor.css">
