--- a/src/main/resources/static/css/commodity.css
+++ b/src/main/resources/static/css/commodity.css
@@ -22,6 +22,11 @@
 .header{
   /* background:linear-gradient(to left, #6E7686, #6E7686); */
       box-shadow: 1px 1px 10px 0px #c0cbce;
+  position: fixed;
+  width: 100%;
+  z-index: 5;
+  top: 0;
+  background: #fff;
 }
 body{
   min-height: 100%;
@@ -78,5 +83,17 @@ body{
   font-weight: 400;
   color: #474E5D;
   position: absolute;
-    bottom: 20px;
+    /*bottom: 20px;*/
+}
+.playicon{
+  overflow: hidden;
+  position: absolute;
+  left: 10px;
+  top: 10px;
+  z-index: 3;
+  background: #ffffffbf;
+  border-radius: 4px;
+}
+#list{
+  margin-top: 35px;
 }
