--- a/src/main/resources/templates/reception/index.html
+++ b/src/main/resources/templates/reception/index.html
@@ -19,7 +19,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <!-- <link rel="stylesheet" href="css/lib/swiper-3.3.1.min.css"> -->
     <link rel="stylesheet" href="css/phone.css">
-    <link rel="stylesheet" th:href="@{/css/commodity.css}">
+    <link rel="stylesheet" th:href="@{~/css/commodity.css}">
     <link rel="stylesheet" href="css/backcolor.css">
     <link href="https://cdn.bootcss.com/photoswipe/4.1.2/photoswipe.css" rel="stylesheet">
     <link href="https://cdn.bootcss.com/photoswipe/4.1.2/default-skin/default-skin.css" rel="stylesheet">
